[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dubby"
description = "A small project management application written in only with Python's standard library."
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Adam Cox", email = "adam@legiongis.com"},
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
]

[tool.setuptools]
packages = [
    "app"
]
